tests/negative/break_outside_loop.sans
// expect-error: break
main() I {
  break
  0
}
